--- a/index.html
+++ b/index.html
@@ -7,11 +7,67 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <title>Hello, world!</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+     <header class=" w-100 mb-2">
+        <div class="container py-5">
+                <div class=" row py-5">
+                    <div class="col-md-12 col-lg-6 d-flex align-items-center">
+                        <div class="header-bike-test">
+                            <p class="fs-5 text-muted mb-2">Computer-controlled digital transistorized with electronic advance</p>
+                            <h1 class="display-5 mb-2 text-light">Honda CBR 300R</h1>
+                            <p class="fs-4 text-muted">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                             <!-- using modal  -->
+                             <!-- Button trigger modal -->
+                            <button type="button" class="btn px-4 py-1 btn-danger rounded mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <p class="fs-2">purchase</p>
+                            </button>
+          
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                       <div class="header-img">
+                        <img class="img-fluid" src="images/header-bike.png" alt="header bike">
+                       </div>
+                    </div>
+                </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="row">
+
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
