--- a/index.html
+++ b/index.html
@@ -54,8 +54,17 @@
         </div>
     </header>
     <main>
-        <section>
-            <div class="row">
+        <section class="feature py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="text-center">
+                            <h1 class="fw-bold mb-3">Features Bikes 2021</h1>
+                            <p class=" fs-6">Best bike collection</p>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
         </section>
