--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <p class="fs-4 text-muted">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                              <!-- using modal  -->
                              <!-- Button trigger modal -->
-                            <button type="button" class="btn px-4 py-1 btn-danger rounded mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <button type="button" class="mb-3 btn px-4 py-1 btn-danger rounded mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 <p class="fs-2">purchase</p>
                             </button>
           
@@ -63,9 +63,20 @@
                             <p class=" fs-6">Best bike collection</p>
                         </div>
                     </div>
-
                 </div>
-
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike">
+                </div>
+                <div class="col-lg-4">
+                    <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike" style="filter: none;">
+                </div>
+                <div class="col-lg-4">
+                    <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike">
+                </div>
             </div>
         </section>
     </main>
