--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </section>
-        <section class="container">
+        <section class="container mb-5">
             <div class="row">
                 <div class="col-lg-4">
                     <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike">
@@ -79,6 +79,20 @@
                 </div>
             </div>
         </section>
+        <!-- Latest News Section  -->
+        <!-- Latest section Header Part  -->
+        <section class="latest py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="text-center">
+                            <h1 class="fw-bold mb-4 text-capitalize">latest news</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
