add latest part

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         </section>
         <section class="container mb-5">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4 mb-5">
                     <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4 mb-5">
                     <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike" style="filter: none;">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4 mb-5">
                     <img class="feature-img" src="images/feature-bike.jpg" class="img-fluid" alt="Feature bike">
                 </div>
             </div>
@@ -90,6 +90,48 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card h-100 p-4 text-start">
+                        <img src="images/bike-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h2 class="card-title fs-2 my-2">Ducati XDIAVEL S-73</h2>
+                          <p class="card-text text-muted fs-5 my-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="footer">
+                            <a href="#" class="btn btn1 p-3 fs-4 mt-5" p>read more</a>
+                        </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="card h-100 p-4">
+                          <img src="images/bike-2.png" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h2 class="card-title fs-2 my-2 ">Ducati XDIAVEL S-73</h2>
+                            <p class="card-text text-muted fs-5 my-3 ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          </div>
+                          <div class="footer">
+                              <a href="#" class="btn btn1 p-3 fs-4 mt-5" p>read more</a>
+                          </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 p-4">
+                              <img src="images/bike-1.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h2 class="card-title fs-2 my-2">Ducati XDIAVEL S-73</h2>
+                                <p class="card-text text-muted fs-5 my-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              </div>
+                              <div class="footer">
+                                  <a href="#" class="btn btn1 p-3 fs-4 mt-5" p>read more</a>
+                              </div>
+                              </div>
+                        </div>
+                  </div>
             </div>
         </section>
 
