--- a/index.html
+++ b/index.html
@@ -111,27 +111,42 @@
                         <div class="card h-100 p-4">
                           <img src="images/bike-2.png" class="card-img-top" alt="...">
                           <div class="card-body">
-                            <h2 class="card-title fs-2 my-2 ">Ducati XDIAVEL S-73</h2>
+                            <h2 class="card-title fs-2 my-2 ">Motorcycles & Scooters</h2>
                             <p class="card-text text-muted fs-5 my-3 ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                           </div>
                           <div class="footer">
-                              <a href="#" class="btn btn1 p-3 fs-4 mt-5" p>read more</a>
+                              <a href="#" class="btn btn2  p-3 border border-danger btn-light  fs-4 mt-5" p>read more</a>
                           </div>
                           </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 p-4">
-                              <img src="images/bike-1.png" class="card-img-top" alt="...">
+                              <img src="images/bike-3.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                <h2 class="card-title fs-2 my-2">Ducati XDIAVEL S-73</h2>
+                                <h2 class="card-title fs-2 my-2">2021 Honda CBR500R</h2>
                                 <p class="card-text text-muted fs-5 my-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
                               <div class="footer">
-                                  <a href="#" class="btn btn1 p-3 fs-4 mt-5" p>read more</a>
+                                  <a href="#" class="btn btn2 border border-danger p-3 fs-4 mt-5" p>read more</a>
                               </div>
                               </div>
                         </div>
                   </div>
+            </div>
+        </section>
+        <!-- happy clients says  -->
+        <section class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="happy-1">
+                        <img src="images/user-1.png" alt="">
+                        <p>Slate helps you see how 
+                            many more days you need 
+                            to work to reach your financial 
+                            goal for the month and year.</p>
+                            
+                    </div>
+                </div>
             </div>
         </section>
 
