--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Hello, world!</title>
+    <!-- link font awsome  -->
+    <script src="https://kit.fontawesome.com/aa5fb3ec24.js" crossorigin="anonymous"></script>
+    <!-- link  css  -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -135,18 +138,74 @@
             </div>
         </section>
         <!-- happy clients says  -->
-        <section class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="happy-1">
-                        <img src="images/user-1.png" alt="">
-                        <p>Slate helps you see how 
-                            many more days you need 
+        <section class="happy-font">
+            <div class="container mt-5">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col d-flex justify-content-center">
+                      <div class="card h-100 text-center p-5">
+                        <div class="text-center"><img class="happy-img mb-4" src="images/user-1.png" class="card-img-top" alt="..."></div>
+                        <div class="card-body">
+                          <p class="card-text mb-4 fs-5">Slate helps   you see how many more days you need 
                             to work to reach your financial 
                             goal for the month and year.</p>
-                            
+                            <span class="icon fs-4">
+                                <i class="fas text-danger fa-star"></i>
+                                 <i class="fas text-danger fa-star"></i>
+                                 <i class="fas text-danger fa-star"></i>
+                                 <i class="fas text-danger fa-star"></i>
+                                <i class="text-danger far fa-star"></i>
+                            </span>
+                            <p class=" my-4 fs-5 text-capitalize fw-bold text-primary">regina miles</p>
+                            <p class="fw-bold fs-5">Banker</p>
+
+                            </div>
+                        </div>
+
                     </div>
-                </div>
+
+                    <div class="col d-flex justify-content-center">
+                        <div class="card h-100 text-center p-5">
+                          <div class="text-center"><img class="happy-img mb-4" src="images/user-1.png" class="card-img-top" alt="..."></div>
+                          <div class="card-body">
+                            <p class="card-text mb-4 fs-5">Slate helps   you see how many more days you need 
+                              to work to reach your financial 
+                              goal for the month and year.</p>
+                              <span class="icon fs-4">
+                                  <i class="fas text-danger fa-star"></i>
+                                   <i class="fas text-danger fa-star"></i>
+                                   <i class="fas text-danger fa-star"></i>
+                                   <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                              </span>
+                              <p class=" my-4 fs-5 text-capitalize fw-bold text-primary">regina miles</p>
+                              <p class="fw-bold fs-5">Banker</p>
+  
+                              </div>
+                          </div>
+  
+                      </div>
+                      <div class="col d-flex justify-content-center">
+                        <div class="card h-100 text-center p-5">
+                          <div class="text-center"><img class="happy-img mb-4" src="images/user-1.png" class="card-img-top" alt="..."></div>
+                          <div class="card-body">
+                            <p class="card-text mb-4 fs-5">Slate helps   you see how many more days you need 
+                              to work to reach your financial 
+                              goal for the month and year.</p>
+                              <span class="icon fs-4">
+                                  <i class="fas text-danger fa-star"></i>
+                                   <i class="fas text-danger fa-star"></i>
+                                   <i class="fas text-danger fa-star"></i>
+                                   <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                              </span>
+                              <p class=" my-4 fs-5 text-capitalize fw-bold text-primary">regina miles</p>
+                              <p class="fw-bold fs-5">Banker</p>
+  
+                              </div>
+                          </div>
+  
+                      </div>
+                  </div>
             </div>
         </section>
 
