--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
                   </div>
             </div>
         </section>
+        <!-- Happy section header  -->
+        <section class="latest py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="text-center">
+                            <h1 class="display-4 fw-bold mb-4 text-capitalize">Happy <span class="text-warning">Clients says</span></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- happy clients says  -->
         <section class="happy-font">
             <div class="container mt-5">
@@ -165,7 +177,7 @@
 
                     <div class="col d-flex justify-content-center">
                         <div class="card h-100 text-center p-5">
-                          <div class="text-center"><img class="happy-img mb-4" src="images/user-1.png" class="card-img-top" alt="..."></div>
+                          <div class="text-center"><img class="happy-img mb-4" src="images/user-2.png" class="card-img-top" alt="..."></div>
                           <div class="card-body">
                             <p class="card-text mb-4 fs-5">Slate helps   you see how many more days you need 
                               to work to reach your financial 
@@ -186,7 +198,7 @@
                       </div>
                       <div class="col d-flex justify-content-center">
                         <div class="card h-100 text-center p-5">
-                          <div class="text-center"><img class="happy-img mb-4" src="images/user-1.png" class="card-img-top" alt="..."></div>
+                          <div class="text-center"><img class="happy-img mb-4" src="images/user-3.jpg" class="card-img-top" alt="..."></div>
                           <div class="card-body">
                             <p class="card-text mb-4 fs-5">Slate helps   you see how many more days you need 
                               to work to reach your financial 
@@ -208,7 +220,104 @@
                   </div>
             </div>
         </section>
-
+        <!-- Frequntly ask question section heaer part  -->
+        <section class="latest py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="text-center">
+                            <h1 class="display-4 fw-bold mb-4 text-capitalize">Frequently Ask <span class="text-warning">Qustion</span></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Frequently ask main section  -->
+        <section class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="frequently-img">
+                        <img src="images/faq.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row my-3">
+                        <div class="col-lg-12">
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        What are the most important things I should
+                                        know about riding a bike?
+                                    </button>
+                                  </h2>
+                                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                      <strong>This is the first item's accordion body.</strong> It is shown by  CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    </div>
+                                  </div>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="row my-3">
+                        <div class="col-lg-12">
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
+                                        How can I tell if my helmet is old and I need a 
+                                        new one?
+                                    </button>
+                                  </h2>
+                                  <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to sr default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    </div>
+                                  </div>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="row my-3">
+                        <div class="col-lg-12">
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseOne">
+                                        My bike has been in storage is it safe to ride?
+                                    </button>
+                                  </h2>
+                                  <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to n the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    </div>
+                                  </div>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="row my-3">
+                        <div class="col-lg-12">
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
+                                        What rules should I follow when riding my bike?
+                                    </button>
+                                  </h2>
+                                  <div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as  <code>.accordion-body</code>, though the transition does limit overflow.
+                                    </div>
+                                  </div>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
