add bonous section

--- a/index.html
+++ b/index.html
@@ -318,6 +318,163 @@
                 </div>
             </div>
         </section>
+         <!-- Popular Barands  -->
+         <!-- popular Brand header part  -->
+         <section class="latest py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="text-center">
+                            <h1 class="display-5 fw-bold mb-4 text-capitalize">Popular Brands</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- popular brand main part  -->
+        <section class="container">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="images/yahma.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                          <h2 class="card-title text-uppercase">Yamaha Yzf    r15</h2>
+                          <p class="card-text fs-5 fw-bold mt-4">$900 - $1500</p>
+                           <div class="d-flex justify-content-between">
+                            <p><span class="icon fs-6">
+                                <i class="fas text-danger fa-star"></i>
+                                <i class="fas text-danger fa-star"></i>
+                                <i class="fas text-danger fa-star"></i>
+                                <i class="fas text-danger fa-star"></i>
+                                <i class="text-danger far fa-star"></i>
+                                </span></p>
+                                <p><span class="text-muted">Based On 1011 User Reviews</span></p>
+                           </div>
+                            <p class="text-muted">48.75 kmpl . 155cc . 18.6 Ps </p>
+                    </div>
+                    <div class="footer">
+                        <a href="#" class="btn btn1 border border-danger text-capitalize p-3 fs-4 mt-2">buy now</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="images/suzuki.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                            <h2 class="card-title text-uppercase">Suzuki    z15</h2>
+                            <p class="card-text fs-5 fw-bold mt-4">$900 - $1500</p>
+                             <div class="d-flex justify-content-between">
+                              <p><span class="icon fs-6">
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                                  </span></p>
+                                  <p><span class="text-muted">Based On 1011 User Reviews</span></p>
+                             </div>
+                              <p class="text-muted">48.75 kmpl . 155cc . 18.6 Ps </p>
+                      </div>
+                      <div class="footer">
+                          <a href="#" class="btn btn1 border border-danger text-capitalize p-3 fs-4 mt-2">buy now</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="images/pulsar.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                            <h2 class="card-title text-uppercase">Pulsar Yzf    r15</h2>
+                            <p class="card-text fs-5 fw-bold mt-4">$900 - $1500</p>
+                             <div class="d-flex justify-content-between">
+                              <p><span class="icon fs-6">
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                                  </span></p>
+                                  <p><span class="text-muted">Based On 1011 User Reviews</span></p>
+                             </div>
+                              <p class="text-muted">48.75 kmpl . 155cc . 18.6 Ps </p>
+                      </div>
+                      <div class="footer">
+                          <a href="#" class="btn btn1 border border-danger text-capitalize p-3 fs-4 mt-2">buy now</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="images/apache.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                            <h2 class="card-title text-uppercase">apache Yzf    r15</h2>
+                            <p class="card-text fs-5 fw-bold mt-4">$500 - $600</p>
+                             <div class="d-flex justify-content-between">
+                              <p><span class="icon fs-6">
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                                  </span></p>
+                                  <p><span class="text-muted">Based On 1011 User Reviews</span></p>
+                             </div>
+                              <p class="text-muted">48.75 kmpl . 155cc . 18.6 Ps </p>
+                      </div>
+                      <div class="footer">
+                          <a href="#" class="btn btn1 border border-danger text-capitalize p-3 fs-4 mt-2">buy now</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="images/activa-6g5e538156def4a.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                            <h2 class="card-title text-uppercase">Hero Honda Yzf    r15</h2>
+                            <p class="card-text fs-5 fw-bold mt-4">$900 - $1500</p>
+                             <div class="d-flex justify-content-between">
+                              <p><span class="icon fs-6">
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                                  </span></p>
+                                  <p><span class="text-muted">Based On 1011 User Reviews</span></p>
+                             </div>
+                              <p class="text-muted">48.75 kmpl . 155cc . 18.6 Ps </p>
+                      </div>
+                      <div class="footer">
+                          <a href="#" class="btn btn1 border border-danger text-capitalize p-3 fs-4 mt-2">buy now</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="images/honda.webp" class="card-img-top" alt="...">
+                      <div class="card-body">
+                            <h2 class="card-title text-uppercase">Honda Yzf    r15</h2>
+                            <p class="card-text fs-5 fw-bold mt-4">$700 - $900</p>
+                             <div class="d-flex justify-content-between">
+                              <p><span class="icon fs-6">
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="fas text-danger fa-star"></i>
+                                  <i class="text-danger far fa-star"></i>
+                                  </span></p>
+                                  <p><span class="text-muted">Based On 1011 User Reviews</span></p>
+                             </div>
+                              <p class="text-muted">48.75 kmpl . 155cc . 18.6 Ps </p>
+                      </div>
+                      <div class="footer">
+                          <a href="#" class="btn btn1 border border-danger text-capitalize p-3 fs-4 mt-2">buy now</a>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </section>
+         
     </main>
     <footer>
 
