--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <section class="happy-font">
             <div class="container mt-5">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col d-flex justify-content-center">
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                       <div class="card h-100 text-center p-5">
                         <div class="text-center"><img class="happy-img mb-4" src="images/user-1.png" class="card-img-top" alt="..."></div>
                         <div class="card-body">
@@ -176,7 +176,7 @@
 
                     </div>
 
-                    <div class="col d-flex justify-content-center">
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                         <div class="card h-100 text-center p-5">
                           <div class="text-center"><img class="happy-img mb-4" src="images/user-2.png" class="card-img-top" alt="..."></div>
                           <div class="card-body">
@@ -197,7 +197,7 @@
                           </div>
   
                       </div>
-                      <div class="col d-flex justify-content-center">
+                      <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                         <div class="card h-100 text-center p-5">
                           <div class="text-center"><img class="happy-img mb-4" src="images/user-3.jpg" class="card-img-top" alt="..."></div>
                           <div class="card-body">
@@ -222,8 +222,8 @@
             </div>
         </section>
         <!-- Frequntly ask question section heaer part  -->
-        <section class="latest pt-3 mt-5">
-            <div class="container">
+        <section class="latest pt-3 my-5">
+            <div class="container mb-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center">
@@ -335,7 +335,7 @@
         <!-- popular brand main part  -->
         <section class="container">
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col-md-6 col-lg-4">
                   <div class="card h-100">
                     <img src="images/yahma.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -358,7 +358,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                       <img src="images/suzuki.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -381,7 +381,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                       <img src="images/pulsar.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -404,7 +404,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                       <img src="images/apache.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -427,7 +427,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                       <img src="images/activa-6g5e538156def4a.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -450,7 +450,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                       <img src="images/honda.webp" class="card-img-top" alt="...">
                       <div class="card-body">
