--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center">
-                            <h1 class="display-4 fw-bold mb-4 text-capitalize">Happy <span class="icon-star">Clients says</span></h1>
+                            <h1 class="fw-bold mb-4 text-capitalize">Happy <span class="icon-star">Clients says</span></h1>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center">
-                            <h1 class="display-4 fw-bold mb-4 text-capitalize">Frequently Ask <span class="icon-star">Qustion</span></h1>
+                            <h1 class=" fw-bold mb-4 text-capitalize">Frequently Ask <span class="icon-star">Qustion</span></h1>
                         </div>
                     </div>
                 </div>
